--- a/note.ipynb
+++ b/note.ipynb
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d83692d8",
+   "id": "7383ef87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f2b173ef",
+   "id": "b8fb1b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2cf6914c",
+   "id": "a4c1c901",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e7afa798",
+   "id": "86a49c51",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "42203478",
+   "id": "a3369228",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a4674467",
+   "id": "ff8fcd44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "afbda86f",
+   "id": "b2667476",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e3cfd5f0",
+   "id": "1cdd1e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "aefab483",
+   "id": "e09ac37f",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "89d91a1a",
+   "id": "c2244261",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "670f6aae",
+   "id": "dd6a493c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b8409a50",
+   "id": "7de47edc",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "4fe51a75",
+   "id": "5aca619e",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,342 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c455a897",
+   "id": "0491ffc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AUTOTUNE = tf.data.AUTOTUNE\n",
+    "\n",
+    "def configure_dataset(dataset):\n",
+    "    return dataset.cache().prefetch(buffer_size=AUTOTUNE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "462fce5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countLetters(word):\n",
+    "    counter = {}\n",
+    "    for letter in word:\n",
+    "        if letter not in counter:\n",
+    "            counter[letter] = 0\n",
+    "        counter[letter] += 1\n",
+    "    return counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c9d32573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'c': 1, '0': 1}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countLetters('c0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7be91987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "1fcd4b15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countLetters(word):\n",
+    "    counter = defaultdict(int)\n",
+    "    for letter in word:\n",
+    "        counter[letter] += 1\n",
+    "    return counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "6c7792c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = countLetters('asdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0f0fc60a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = defaultdict(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f6dbac77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {})"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d14aad21",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [88]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m temp[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "temp['a'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "381da316",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_dict = defaultdict(lambda: 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "41922fe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>, {})"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "b3722cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def groupWords(words):\n",
+    "    grouper = defaultdict(list)\n",
+    "    for word in words:\n",
+    "        length = len(word)\n",
+    "        grouper[length].append(word)\n",
+    "    return grouper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "b280bc22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {4: ['asdf'], 3: ['asd', 'ded'], 1: ['a', 'b']})"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupWords(['asdf', 'asd', 'a', 'b', 'ded'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "42de0cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model(vocab_size, num_labels):\n",
+    "  model = tf.keras.Sequential([\n",
+    "      layers.Embedding(vocab_size, 64, mask_zero=True),\n",
+    "      layers.Conv1D(64, 5, padding=\"valid\", activation=\"relu\", strides=2),\n",
+    "      layers.GlobalMaxPooling1D(),\n",
+    "      layers.Dense(num_labels)\n",
+    "  ])\n",
+    "  return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff06423d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06b553ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fff98a83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d75f7cba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd0ad837",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c459283f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f706b6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a6d89ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d82a19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ef14f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "071d860d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a68c2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d394def4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "978630ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4baf0ead",
    "metadata": {},
    "outputs": [],
    "source": []
