--- a/note.ipynb
+++ b/note.ipynb
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7383ef87",
+   "id": "f5c403bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b8fb1b6f",
+   "id": "2a2dfb47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a4c1c901",
+   "id": "f2f2035f",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "86a49c51",
+   "id": "77249fce",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a3369228",
+   "id": "cac70dc5",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ff8fcd44",
+   "id": "b4e8136f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b2667476",
+   "id": "048713d4",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1cdd1e96",
+   "id": "d597fb32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e09ac37f",
+   "id": "b08a57e7",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c2244261",
+   "id": "704a4401",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "dd6a493c",
+   "id": "19c21b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7de47edc",
+   "id": "f323fded",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5aca619e",
+   "id": "56b1c097",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0491ffc6",
+   "id": "88f043c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "462fce5e",
+   "id": "593c8e5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c9d32573",
+   "id": "eb7fba8d",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7be91987",
+   "id": "5384fe1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1fcd4b15",
+   "id": "b35609d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6c7792c7",
+   "id": "325af92a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0f0fc60a",
+   "id": "e5a16b3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "f6dbac77",
+   "id": "0befc8a3",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d14aad21",
+   "id": "e2953307",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "381da316",
+   "id": "76f7b80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "41922fe8",
+   "id": "645d9188",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "b3722cba",
+   "id": "acd62fb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b280bc22",
+   "id": "f180d152",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "42de0cd4",
+   "id": "7f0ddc89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,142 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff06423d",
+   "id": "8cdf2ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VOCAB_SIZE = 10000\n",
+    "\n",
+    "binary_vectorize_layer = TextVectorization(\n",
+    "    max_tokens=VOCAB_SIZE,\n",
+    "    output_mode='binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "302055d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_SEQUENCE_LENGTH = 250\n",
+    "\n",
+    "int_vectorize_layer = TextVectorization(\n",
+    "    max_tokens=VOCAB_SIZE,\n",
+    "    output_mode='int',\n",
+    "    output_sequence_length=MAX_SEQUENCE_LENGTH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b04e36ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = [1, 2], [3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "c7ae09e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2], [3, 4])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "223f0fd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n",
+      "2 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in zip(a, b):\n",
+    "    print(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "22e24b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10,), dtype=int64, numpy=array([1, 2, 3, 4, 5, 6, 7, 8, 9, 0], dtype=int64)>"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0]\n",
+    "a = tf.cast(a, dtype=tf.int64)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "7d0cd555",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10, 1), dtype=int64, numpy=\n",
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4],\n",
+       "       [5],\n",
+       "       [6],\n",
+       "       [7],\n",
+       "       [8],\n",
+       "       [9],\n",
+       "       [0]], dtype=int64)>"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = tf.expand_dims(a, -1)\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f905a230",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -652,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b553ba",
+   "id": "5cad7ab6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -660,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff98a83",
+   "id": "6f2aa988",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -668,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75f7cba",
+   "id": "d2beeadf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -676,87 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd0ad837",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c459283f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f706b6e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a6d89ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94d82a19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ef14f3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "071d860d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a68c2b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d394def4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "978630ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4baf0ead",
+   "id": "e7764706",
    "metadata": {},
    "outputs": [],
    "source": []
