--- a/note.ipynb
+++ b/note.ipynb
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f5c403bb",
+   "id": "d47c89f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2a2dfb47",
+   "id": "20e6ea49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f2f2035f",
+   "id": "180ac0cd",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "77249fce",
+   "id": "487596f8",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cac70dc5",
+   "id": "cffbc83f",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b4e8136f",
+   "id": "cd010c25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "048713d4",
+   "id": "71ab7e7e",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "d597fb32",
+   "id": "986e2204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b08a57e7",
+   "id": "588845a2",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "704a4401",
+   "id": "b6001366",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "19c21b39",
+   "id": "5e8f48a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f323fded",
+   "id": "18f8dc45",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "56b1c097",
+   "id": "5243f31e",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88f043c0",
+   "id": "517482a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "593c8e5f",
+   "id": "75bf535e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "eb7fba8d",
+   "id": "a0362596",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5384fe1b",
+   "id": "6fa13550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b35609d9",
+   "id": "9a7124e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "325af92a",
+   "id": "42172d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e5a16b3d",
+   "id": "a8dd988d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0befc8a3",
+   "id": "d89dd836",
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +536,10 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "e2953307",
-   "metadata": {},
+   "id": "e36edb54",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -558,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "76f7b80a",
+   "id": "8763df43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "645d9188",
+   "id": "352660de",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "acd62fb1",
+   "id": "bad5f188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f180d152",
+   "id": "f761c4d1",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7f0ddc89",
+   "id": "dee5dbed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cdf2ce8",
+   "id": "958f5bd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "302055d7",
+   "id": "844a5042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,152 +671,6 @@
     "    output_mode='int',\n",
     "    output_sequence_length=MAX_SEQUENCE_LENGTH)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "b04e36ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a, b = [1, 2], [3, 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "c7ae09e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([1, 2], [3, 4])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "223f0fd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 3\n",
-      "2 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, j in zip(a, b):\n",
-    "    print(i, j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "22e24b57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(10,), dtype=int64, numpy=array([1, 2, 3, 4, 5, 6, 7, 8, 9, 0], dtype=int64)>"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0]\n",
-    "a = tf.cast(a, dtype=tf.int64)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "id": "7d0cd555",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(10, 1), dtype=int64, numpy=\n",
-       "array([[1],\n",
-       "       [2],\n",
-       "       [3],\n",
-       "       [4],\n",
-       "       [5],\n",
-       "       [6],\n",
-       "       [7],\n",
-       "       [8],\n",
-       "       [9],\n",
-       "       [0]], dtype=int64)>"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = tf.expand_dims(a, -1)\n",
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f905a230",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cad7ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f2aa988",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2beeadf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7764706",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
