--- a/note.ipynb
+++ b/note.ipynb
@@ -3,53 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4fe98eb0",
+   "id": "33e7982f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "import os\n",
-    "import pprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6dda5b65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p_file = pathlib.Path('/Users/temp/file.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "98c523f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\Users\\temp\\file.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p_file)"
+    "a1 = 12"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0bc29493",
+   "id": "35ab8760",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "'a'"
       ]
      },
      "execution_count": 4,
@@ -58,619 +28,111 @@
     }
    ],
    "source": [
-    "p_file.is_file()"
+    "chr(97)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "13a9b008",
+   "execution_count": null,
+   "id": "8f7f4b4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pathlib.WindowsPath'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(type(p_file))"
+    "share, remainder"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7517c2b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p_dir = pathlib.Path('/Users/temp/dir')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "de622abc",
+   "id": "559f6767",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\Users\\temp\\dir\n"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(p_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4dde3765",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pathlib.WindowsPath'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(p_dir))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "77f2989c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "p_new_file = pathlib.Path('/Users/temp/new_file.txt')\n",
-    "print(p_new_file.exists())"
+    "0x\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d05c0b91",
+   "id": "34e35af9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p_file"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc95d512",
+   "id": "b78bc30d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p_file.samefile(p_file_join)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "bbe7e69b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.8.0'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "d47c89f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DIRECTORY_URL = 'https://storage.googleapis.com/download.tensorflow.org/data/illiad/'\n",
-    "FILE_NAMES = ['cowper.txt', 'derby.txt', 'butler.txt']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "20e6ea49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras import utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "180ac0cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\workspace\\\\Pycharm\\\\tf25\\\\illiad\\\\'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path = os.getcwd() + '\\\\illiad\\\\'\n",
-    "path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "487596f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WindowsPath('C:/Users/winston/.keras/datasets/butler.txt'),\n",
-       " WindowsPath('C:/Users/winston/.keras/datasets/cowper.txt'),\n",
-       " WindowsPath('C:/Users/winston/.keras/datasets/derby.txt')]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DIRECTORY_URL = 'https://storage.googleapis.com/download.tensorflow.org/data/illiad/'\n",
-    "FILE_NAMES = ['cowper.txt', 'derby.txt', 'butler.txt']\n",
-    "\n",
-    "for name in FILE_NAMES:\n",
-    "  text_dir = utils.get_file(name, origin=DIRECTORY_URL + name)\n",
-    "\n",
-    "parent_dir = pathlib.Path(text_dir).parent\n",
-    "list(parent_dir.iterdir())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "cffbc83f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('C:/Users/winston/.keras/datasets/butler.txt')"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parent_dir/'butler.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "cd010c25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lines_dataset = tf.data.TextLineDataset(str(parent_dir/'butler.txt'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "71ab7e7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<TextLineDatasetV2 element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lines_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "986e2204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = lines_dataset.take(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "588845a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<TakeDataset element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "b6001366",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'\\xef\\xbb\\xbfSing, O goddess, the anger of Achilles son of Peleus, that brought'\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in temp:\n",
-    "    print(i.numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "5e8f48a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 5\n",
-    "temp1 = tf.cast(a, dtype=tf.int64)\n",
-    "temp2 = tf.cast(a+1, dtype=tf.int64)\n",
-    "temp3 = tf.cast(a+2, dtype=tf.int64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "18f8dc45",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(), dtype=int64, numpy=7>"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "5243f31e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tensorflow.python.framework.ops.EagerTensor' object has no attribute 'concatenate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [64]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m temp \u001b[38;5;241m=\u001b[39m \u001b[43mtemp1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m(temp2)\n",
-      "File \u001b[1;32m~\\anaconda3_64\\envs\\tf25\\lib\\site-packages\\tensorflow\\python\\framework\\ops.py:513\u001b[0m, in \u001b[0;36mTensor.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    505\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mastype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mravel\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtranspose\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreshape\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclip\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msize\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    506\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtolist\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m\"\u001b[39m}:\n\u001b[0;32m    507\u001b[0m   \u001b[38;5;66;03m# TODO(wangpeng): Export the enable_numpy_behavior knob\u001b[39;00m\n\u001b[0;32m    508\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m    509\u001b[0m \u001b[38;5;124m    \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\n\u001b[0;32m    510\u001b[0m \u001b[38;5;124m    If you are looking for numpy-related methods, please run the following:\u001b[39m\n\u001b[0;32m    511\u001b[0m \u001b[38;5;124m    from tensorflow.python.ops.numpy_ops import np_config\u001b[39m\n\u001b[0;32m    512\u001b[0m \u001b[38;5;124m    np_config.enable_numpy_behavior()\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, name))\n\u001b[1;32m--> 513\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute 'concatenate'"
-     ]
-    }
-   ],
-   "source": [
-    "temp = temp1.concatenate(temp2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "517482a1",
+   "id": "16d99e12",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "AUTOTUNE = tf.data.AUTOTUNE\n",
-    "\n",
-    "def configure_dataset(dataset):\n",
-    "    return dataset.cache().prefetch(buffer_size=AUTOTUNE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "75bf535e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def countLetters(word):\n",
-    "    counter = {}\n",
-    "    for letter in word:\n",
-    "        if letter not in counter:\n",
-    "            counter[letter] = 0\n",
-    "        counter[letter] += 1\n",
-    "    return counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "a0362596",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'c': 1, '0': 1}"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countLetters('c0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "6fa13550",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "9a7124e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def countLetters(word):\n",
-    "    counter = defaultdict(int)\n",
-    "    for letter in word:\n",
-    "        counter[letter] += 1\n",
-    "    return counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "42172d06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = countLetters('asdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "a8dd988d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = defaultdict(list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "d89dd836",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {})"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "e36edb54",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'set' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [88]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m temp[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'set' object does not support item assignment"
-     ]
-    }
-   ],
-   "source": [
-    "temp['a'] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "8763df43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab_dict = defaultdict(lambda: 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "352660de",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.<lambda>()>, {})"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vocab_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "bad5f188",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "def groupWords(words):\n",
-    "    grouper = defaultdict(list)\n",
-    "    for word in words:\n",
-    "        length = len(word)\n",
-    "        grouper[length].append(word)\n",
-    "    return grouper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "f761c4d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {4: ['asdf'], 3: ['asd', 'ded'], 1: ['a', 'b']})"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "groupWords(['asdf', 'asd', 'a', 'b', 'ded'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "dee5dbed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_model(vocab_size, num_labels):\n",
-    "  model = tf.keras.Sequential([\n",
-    "      layers.Embedding(vocab_size, 64, mask_zero=True),\n",
-    "      layers.Conv1D(64, 5, padding=\"valid\", activation=\"relu\", strides=2),\n",
-    "      layers.GlobalMaxPooling1D(),\n",
-    "      layers.Dense(num_labels)\n",
-    "  ])\n",
-    "  return model"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "958f5bd6",
+   "id": "d698e95f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "VOCAB_SIZE = 10000\n",
-    "\n",
-    "binary_vectorize_layer = TextVectorization(\n",
-    "    max_tokens=VOCAB_SIZE,\n",
-    "    output_mode='binary')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844a5042",
+   "id": "8f505b75",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "MAX_SEQUENCE_LENGTH = 250\n",
-    "\n",
-    "int_vectorize_layer = TextVectorization(\n",
-    "    max_tokens=VOCAB_SIZE,\n",
-    "    output_mode='int',\n",
-    "    output_sequence_length=MAX_SEQUENCE_LENGTH)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4169bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "507bc158",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "653a5496",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2e967a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -689,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
