--- a/note.ipynb
+++ b/note.ipynb
@@ -3,69 +3,155 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "33e7982f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a1 = 12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "35ab8760",
+   "id": "eee9affa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'a'"
+       "'2.8.0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chr(97)"
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f7f4b4a",
+   "execution_count": 8,
+   "id": "8e1e8a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.config.list_physical_devices('GPU'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4e22004e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "share, remainder"
+    "c = 3 * 10**8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "559f6767",
+   "execution_count": 18,
+   "id": "6ca11064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = 150 * 10**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ab0f1530",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "2000.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0x\n"
+    "c/f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4e1d6522",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bx1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m temp \u001b[38;5;241m=\u001b[39m \u001b[43mbx1\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bx1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "temp = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "db50aeb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp2 = (1<<3)\n",
+    "temp2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d8cb3437",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e35af9",
+   "id": "a667ee39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b78bc30d",
+   "id": "28fde301",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -81,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16d99e12",
+   "id": "fb76a551",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -89,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d698e95f",
+   "id": "b3caaadb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -97,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f505b75",
+   "id": "48bdec80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,31 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4169bbb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "507bc158",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "653a5496",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2e967a7",
+   "id": "08d647ad",
    "metadata": {},
    "outputs": [],
    "source": []
