--- a/note.ipynb
+++ b/note.ipynb
@@ -39,113 +39,54 @@
     }
    ],
    "source": [
-    "print(tf.config.list_physical_devices('GPU'))"
+    "loss_object = tf.keras.SparseCategoricalCrossentropy(from_logit=True)\n",
+    "def grad(model, inputs, targets):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y_ = model(inputs, training=True)\n",
+    "        loss_value = loss_object(y_ture=targets, y_pred=y_)\n",
+    "    return loss_value, tape.gradient(loss_value, model.trainable_variables)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "4e22004e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = 3 * 10**8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "6ca11064",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = 150 * 10**3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "ab0f1530",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2000.0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c/f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "4e1d6522",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bx1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m temp \u001b[38;5;241m=\u001b[39m \u001b[43mbx1\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'bx1' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "temp = 1"
+    "targets = [1, 2]\n",
+    "pred = [[0.05, 0.95, 0], [0.1, 0.8, 0.1]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "db50aeb6",
+   "id": "ab0f1530",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp2 = (1<<3)\n",
-    "temp2"
+    "tr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "d8cb3437",
+   "execution_count": 29,
+   "id": "4e1d6522",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "1.1769392"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp2"
+    "scce(y_true=targets, y_pred=pred).numpy()"
    ]
   },
   {
