--- a/note.ipynb
+++ b/note.ipynb
@@ -3,96 +3,104 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eee9affa",
+   "id": "28fde301",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2.8.0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8.0\n"
+     ]
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import os\n",
+    "import tensorflow as tf\n",
     "\n",
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8e1e8a8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [0, 1, 2]\n",
-    "b = [3, 4, 5]"
+    "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a667ee39",
+   "id": "fb76a551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_URL = 'https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip'\n",
+    "path_to_zip = tf.keras.utils.get_file('cats_and_dogs.zip', origin=_URL, extract=True, cache_subdir='D:/workspace/Pycharm/tf25/dataset/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3caaadb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = os.path.join(os.path.dirname(path_to_zip), 'cats_and_dogs_filtered')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "08d647ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dir = os.path.join(PATH, 'train')\n",
+    "validation_dir = os.path.join(PATH, 'validation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84869426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32\n",
+    "IMG_SIZE = (160, 160)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fcc5ca7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffle=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fd38c831",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2000 files belonging to 2 classes.\n"
+     ]
     }
    ],
    "source": [
-    "a += b\n",
-    "a"
+    "train_dataset = tf.keras.utils.image_dataset_from_directory(train_dir,\n",
+    "                                                           shuffle=True,\n",
+    "                                                           batch_size=BATCH_SIZE,\n",
+    "                                                           image_size=IMG_SIZE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28fde301",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb76a551",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3caaadb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48bdec80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08d647ad",
+   "id": "cb80d0c3",
    "metadata": {},
    "outputs": [],
    "source": []
