--- a/tutorial Transfer learning and fine-tuning.ipynb
+++ b/tutorial Transfer learning and fine-tuning.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3f02a6b",
+   "id": "c06d0ec6",
    "metadata": {},
    "source": [
     "#### Rescale pixel values"
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f1928f4",
+   "id": "8f9c35d9",
    "metadata": {},
    "source": [
     "In a moment, you will download tf.keras.applications.MobileNetV2 for use as your base model. This model expects pixel values in [-1, 1], but at this point, the pixel values in your images are in [0, 255]. To rescale them, use the preprocessing method included with the model."
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f74728d",
+   "id": "9c2da4cd",
    "metadata": {},
    "source": [
     "### Create the base model from the pre-trained convnets"
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4a0330d2",
+   "id": "74fb54a8",
    "metadata": {},
    "outputs": [
     {
@@ -444,16 +444,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32d12e8",
+   "id": "2a8e8679",
    "metadata": {},
    "source": [
-    "####"
+    "### Feature extraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f8ef493",
+   "metadata": {},
+   "source": [
+    "#### Freeze the convolutional base"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "812f17cb",
+   "id": "ee61664c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b07122",
+   "id": "f6f94cbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -469,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bc1b25c",
+   "id": "d3b819e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -477,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e694b6b",
+   "id": "3478d3d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b7a26c",
+   "id": "2a339c57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -493,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c56842",
+   "id": "9c3cfce3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -501,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0bf54a5",
+   "id": "b9b7e17a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -509,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118ee899",
+   "id": "e4ab4225",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c3e44f",
+   "id": "96198f04",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -525,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a762288d",
+   "id": "68231079",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -533,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf63e74",
+   "id": "16d25f64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -541,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dbc3b6",
+   "id": "e8555bb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -549,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4add2db5",
+   "id": "b09ac569",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -557,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "205bf19c",
+   "id": "e946a2df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246a6345",
+   "id": "3339adf6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -573,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "042c7ed1",
+   "id": "013f36ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6289e13f",
+   "id": "8561cfa2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -589,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd8dcefd",
+   "id": "9782691a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -597,15 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac41f8d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5cb7168",
+   "id": "b99e5596",
    "metadata": {},
    "outputs": [],
    "source": []
