--- a/tutorial Transfer learning and fine-tuning.ipynb
+++ b/tutorial Transfer learning and fine-tuning.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.8.0'"
+       "'2.9.1'"
       ]
      },
      "execution_count": 2,
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "if platform.platform()[:3].lower() == 'win':\n",
-    "    cache_subdir = 'D:/workspace/Pycharm/tf25/dataset/'\n",
+    "    cache_subdir = 'e:/workspace/Pycharm/tf25/dataset/'\n",
     "elif platform.platform()[:3].lower() == 'mac':\n",
     "    cache_subdir = '/Users/rainyseason/winston/Workspace/python/Pycharm Project/tf25/cats_and_dogs/'"
    ]
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "'D:/workspace/Pycharm/tf25/dataset/'"
+       "'e:/workspace/Pycharm/tf25/dataset/'"
       ]
      },
      "execution_count": 4,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "cb3d03c9",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "213aadd6",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "9752a454",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "708023e0",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "e5a0637f",
    "metadata": {},
    "outputs": [
@@ -1633,7 +1633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
